idk why it won't work before